# ditare-api

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ditare_api/: main.py
ditare_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_auth.py  test_main.py
