[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ditare-api"
version = "0.1.0"
description = "Backend API for Ditare macOS dictation app"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "redis>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "pydantic-settings>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ditare_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
